# ladybug-learning

./: .gitignore  Cargo.toml  README.md
examples/: learning_loop.rs
src/: cognitive.rs  core.rs  lib.rs  nars.rs
