[package]
name = "ladybug-learning-standalone"
version = "0.1.0"
edition = "2021"
description = "Meta-AGI Learning Loop - Standalone version with embedded primitives"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[[example]]
name = "learning_loop"
path = "examples/learning_loop.rs"
